# tinycore

./: CMakeLists.txt  README.md
cmake/macros/: AutoCollect.cmake  CheckPlatform.cmake
dep/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/rapidjson/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
example/: CMakeLists.txt
example/chatroom/: CMakeLists.txt  chatroom.cpp  index.html
example/compress/: compress.cpp
example/helloworld/: CMakeLists.txt  helloworld.cpp
example/logging/: CMakeLists.txt  logging.cpp
example/networking/: networking.cpp
example/simpletest/: CMakeLists.txt  simpletest.cpp
src/: CMakeLists.txt
src/tinycore/: CMakeLists.txt  tinycore.h
src/tinycore/asyncio/: httpclient.cpp  httpclient.h  httpconnection.cpp  httpconnection.h  httpserver.cpp  httpserver.h  httputil.cpp  httputil.h  ioloop.cpp  ioloop.h  iostream.cpp  iostream.h  logutil.cpp  logutil.h  netutil.cpp  netutil.h  stackcontext.cpp  stackcontext.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  testing.cpp  testing.h  web.cpp  web.h  websocket.cpp  websocket.h
src/tinycore/common/: common.cpp  common.h  compilerdefs.h  define.h  errors.cpp  errors.h  params.h  random.cpp  random.h
src/tinycore/compress/: gzip.cpp  gzip.h  zlib.cpp  zlib.h
src/tinycore/configuration/: configmgr.cpp  configmgr.h  configparser.cpp  configparser.h  globalinit.cpp  globalinit.h  options.cpp  options.h
src/tinycore/crypto/: base64.cpp  base64.h  hashlib.cpp  hashlib.h
src/tinycore/debugging/: errors.h  trace.cpp  trace.h  watcher.cpp  watcher.h
src/tinycore/httputils/: cookie.cpp  cookie.h  httplib.cpp  httplib.h  urlparse.cpp  urlparse.h
src/tinycore/logging/: appender.cpp  appender.h  appenderconsole.cpp  appenderconsole.h  appendercustom.cpp  appendercustom.h  appenderfile.cpp  appenderfile.h  attributes.cpp  attributes.h  log.cpp  log.h  logger.cpp  logger.h  logging.cpp  logging.h  sinks.cpp  sinks.h
src/tinycore/networking/: httpclient.cpp  httpclient.h  httpserver.cpp  httpserver.h  httputil.cpp  httputil.h  ioloop.cpp  ioloop.h  iostream.cpp  iostream.h  testing.cpp  testing.h  web.cpp  web.h  websocket.cpp  websocket.h
src/tinycore/serialization/: iarchive.cpp  iarchive.h  oarchive.cpp  oarchive.h
src/tinycore/utilities/: container.cpp  container.h  cookie.cpp  cookie.h  httplib.cpp  httplib.h  messagebuffer.cpp  messagebuffer.h  objectmanager.cpp  objectmanager.h  random.cpp  random.h  string.cpp  string.h  strutil.cpp  strutil.h  urlparse.cpp  urlparse.h  util.cpp  util.h
test/: CMakeLists.txt
test/compress/: CMakeLists.txt  compress.cpp
test/httpclient_test/: CMakeLists.txt  httpclient_test.cpp
test/httpserver_test/: CMakeLists.txt  httpserver_test.cpp
test/httputil_test/: CMakeLists.txt  httputil_test.cpp
test/ioloop_test/: CMakeLists.txt  ioloop_test.cpp
test/iostream_test/: CMakeLists.txt  iostream_test.cpp
test/logging/: logging.cpp
test/networking/: CMakeLists.txt  networking.cpp
test/options_test/: CMakeLists.txt  options_test.cfg  options_test.cpp
test/stackcontext_test/: CMakeLists.txt  stackcontext_test.cpp
test/testing_test/: CMakeLists.txt  testing_test.cpp
test/web_test/: CMakeLists.txt  web_test.cpp
test/websocket_test/: CMakeLists.txt  websocket_test.cpp
